--- a/front/restapi/package.json
+++ b/front/restapi/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "alpinejs": "^3.13.5",
     "autoprefixer": "^10.4.17",
     "axios": "^1.6.5",
     "postcss": "^8.4.33",
